--- a/README
+++ b/README
@@ -3,6 +3,6 @@
 / /_/ //    /_/ / / _/ _/ /  
 \____//_/|_//___//_/  /___/  
 
-A project at University of Oslo
+A project by University of Oslo
 
 "Two boys, one app"
