--- a/README
+++ b/README
@@ -5,4 +5,32 @@
 
 A project by University of Oslo
 
-"Two boys, one app"
+
+
+=== /prototype/ ===
+
+```generate/profile/[profile_name]?
+    tag     =   [tag_quantity]&
+    wish    =   [wish_quantity]&
+    student =   [student_quantity]
+```
+
+profile_name = name of the profile that is about to be generated
+
+The next three GET-parameters are unordered, and are ought to be set to a value
+corresponding with the desired quantity of objects.
+
+Ignoring one of these values will force the script to assume that there is
+an existing file in the profile directory that has the necessary data that
+may be used in the generation of the dependant objects.
+
+generate/profile/TestProfile?tag=10&wish=50&student=100
+- will generate 10 tags, 50 wishes and 100 students.
+
+
+generate/profile/TestProfile?wish=100
+- will extend the wish set to 100 Wish-objects reusing the previously generated
+tag and student-files
+
+
+
