--- a/README
+++ b/README
@@ -9,11 +9,19 @@ A project by University of Oslo
 
 === /prototype/ ===
 
+
+== flush/*[model_name] ==
+
+model_name - the name of the model (as in definition) defining objects that
+you want to flush.
+
+== generate/[profile_name] ==
+
 ```generate/profile/[profile_name]?
     tag     =   [tag_quantity]&
     wish    =   [wish_quantity]&
     student =   [student_quantity]
-```
+``
 
 profile_name = name of the profile that is about to be generated
 
@@ -27,10 +35,19 @@ may be used in the generation of the dependant objects.
 generate/profile/TestProfile?tag=10&wish=50&student=100
 - will generate 10 tags, 50 wishes and 100 students.
 
-
 generate/profile/TestProfile?wish=100
 - will extend the wish set to 100 Wish-objects reusing the previously generated
 tag and student-files
 
+== populate/[profile_name] ==
+
+Access this location to transfer the generated data from an existing profile,
+into the database.
 
 
+
+TODO:
+
+== replicate/[profile_name]
+
+Create a new profile consisting of the models in the database.
